# client-feedback-tracker

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  api-contract.yaml  docker-compose.yml  run-compound.sh  run-feature.sh  run-visual.sh  run.sh
.claude/: settings.json  tools-registry.md
.claude/agents/: architect.md  backend.md  frontend.md  reviewer.md  router.md  tester.md  visual.md
.claude/commands/: deliver-feature.md  gc.md  promote-patterns.md  read-prototype.md  sync-to-figma.md
.claude/hooks/: maintenance-gc.sh  post-task.sh  post-tool-structural.sh  pre-task.sh  pre-tool-bash-guard.sh  pre-tool-boundary.sh
.claude/teams/: feature-build-team.json
.claude/workflows/: README.md  feature.yaml  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
app/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0001_create_feedback_items_table.py  0001_create_feedback_table.py  1f4997a62a36_create_feedback_table.py
app/backend/app/: config.py  main.py
app/backend/app/models/: __init__.py  feedback.py
app/backend/app/routers/: feedback.py
app/backend/app/schemas/: feedback.py
app/backend/tests/: conftest.py  test_contracts.py  test_feedback.py  test_feedback_integration.py
backend/: .env.example  alembic.ini  pyproject.toml
config/: harness.config.yaml
design/: README.md  ui-spec.md
escalation/: PROTOCOL.md
harness-rules/: README.md  golden-principles.sh  module-boundaries.json
tasks/: README.md  current-feature.md  implementation-plan.md
(+83 files in other folders)
